when building railties, don't build sample application or generate docs

--- a/railties/Rakefile
+++ b/railties/Rakefile
@@ -89,11 +89,11 @@ task :fresh_rails_without_docs_using_links => [ :clean, :make_dir_structure, :in
 desc "Generates minimal Rails package using symlinks"
 task :dev => [ :clean, :make_dir_structure, :initialize_file_stubs, :link_vendor_libraries, :copy_ties_content ]
 
-desc "Packages the fresh Rails package with documentation"
-task :package => [ :clean, :fresh_rails ] do
-  system %{cd ..; tar -czvf #{PKG_NAME}-#{PKG_VERSION}.tgz #{PKG_NAME}}
-  system %{cd ..; zip -r #{PKG_NAME}-#{PKG_VERSION}.zip #{PKG_NAME}}
-end
+#desc "Packages the fresh Rails package with documentation"
+#task :package => [ :clean, :fresh_rails ] do
+#  system %{cd ..; tar -czvf #{PKG_NAME}-#{PKG_VERSION}.tgz #{PKG_NAME}}
+#  system %{cd ..; zip -r #{PKG_NAME}-#{PKG_VERSION}.zip #{PKG_NAME}}
+#end
 
 task :clean do
   rm_rf PKG_DESTINATION
